<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_timeweb" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="@style/SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="19dp"
        android:inputType="textNoSuggestions"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:queryHint="@string/search"
        app:closeIcon="@null"
        app:searchIcon="@drawable/ic_search" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        app:layout_constraintEnd_toEndOf="@id/searchView"
        app:layout_constraintTop_toTopOf="@id/searchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/cartLayout"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        tools:itemCount="5"
        tools:listitem="@layout/layout_item_domain_free" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorText"
        style="@style/Roboto.Simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/check_domain_title"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nonePlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cartLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Roboto.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/check_domain_title"
            app:layout_constraintBottom_toTopOf="@id/checkBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkBtn"
            style="@style/Button.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/check_domain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Roboto.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/contactUsBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contactUsBtn"
            style="@style/Roboto.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="68dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/contact_us_mail"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sumCartText"
            style="@style/Roboto.Blue.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="400.00 ₽" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buyBtn"
            style="@style/Button.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
